# livkit_eou

./: .env.example  .gitignore  DATASET.md  MODEL_CARD.md  README.md  agent.py  requirements.txt  test_model.py  test_quick.py
livekit-plugins-arabic-turn-detector/: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
livekit-plugins-arabic-turn-detector/livekit_plugins_arabic_turn_detector/: __init__.py  arabic_eou.py  models.py
